Fixed some importPanels Fixed an exception when trying to rotate vertices without tangents + some cleanups